Fortify pipeline integration